# learning-rust-ws

./: .gitignore  Cargo.toml
public/: index.css  index.html  index.js  run.sh
public/cert/: client-identity.p12  gen.sh
src/: lib.rs  main.rs  mercadolibre.rs  router.rs
