[package]
name = "rustws"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.5.2"
ws = "0.9.2"
